同步創建訂單、細節、寄信通知等功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,4 @@ spring.mail.username=nienfxxq@gmail.com
 spring.mail.password=pbbiczokqskxrtvl
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
