--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,20 @@
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 		</dependency>
-
+		
+		<!--commons-io-->
+		<dependency>
+   			<groupId>commons-io</groupId>
+    		<artifactId>commons-io</artifactId>
+    		<version>2.11.0</version>
+		</dependency>
+		
+		
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+        	<artifactId>maven-shade-plugin</artifactId>
+        	<version>3.2.4</version>
+        </dependency>
 
 	</dependencies>
 
