--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
 			<artifactId>jakarta.mail</artifactId>
 			<version>2.0.1</version>
 		</dependency>
-		
+
 		<!--lombok-->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -92,6 +92,11 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>net.bytebuddy</groupId>
+			<artifactId>byte-buddy</artifactId>
+			<version>1.10.3</version>
+		</dependency>
 
 	</dependencies>
 
